vehicle/tests/golden/error/other-verifier/quantifiedVectorNat/quantifiedVectorNat.vcl
@property
f : Bool
f = forall (x : Tensor Nat [2]) . x ! 0 >= 0
